--- a/app/src/main/res/layout/item_shipment.xml
+++ b/app/src/main/res/layout/item_shipment.xml
@@ -83,13 +83,13 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:textSize="@dimen/_11ssp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center"
                     android:fontFamily="@font/inter_regular"
                     android:text="Carrier:"
-                    android:textColor="@color/secondary_text_color" />
+                    android:textColor="@color/secondary_text_color"
+                    android:textSize="@dimen/_11ssp" />
 
 
                 <TextView
