--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -260,13 +260,12 @@
                 android:layout_marginHorizontal="@dimen/padding_inside_table_field"
                 android:layout_marginVertical="@dimen/padding_inside_table_field"
                 android:fontFamily="@font/inter_regular"
-                android:textStyle="bold"
                 android:maxLines="1"
                 android:maxEms="2"
                 android:gravity="center"
                 android:text="  # "
                 android:textAllCaps="true"
-                android:textColor="@color/color_181818" />
+                android:textColor="@color/black" />
 
             <!-- Divider -->
             <View
@@ -282,11 +281,10 @@
                 android:layout_marginVertical="@dimen/padding_inside_table_field"
                 android:fontFamily="@font/inter_regular"
                 android:gravity="center"
-                android:textStyle="bold"
                 android:letterSpacing="-0.01"
                 android:text="@string/item_name_type"
                 android:textAppearance="@style/inter_400_10_16"
-                android:textColor="@color/color_181818" />
+                android:textColor="@color/black" />
 
             <!-- Divider -->
             <View
@@ -312,10 +310,9 @@
                     android:gravity="center"
                     android:letterSpacing="-0.01"
                     android:text="TOT"
-                    android:textStyle="bold"
                     android:textAllCaps="true"
                     android:textAppearance="@style/inter_400_10_16"
-                    android:textColor="@color/color_181818" />
+                    android:textColor="@color/black" />
 
                 <View
                     android:visibility="invisible"
@@ -332,10 +329,9 @@
                     android:gravity="center"
                     android:letterSpacing="-0.01"
                     android:text="SHPD"
-                    android:textStyle="bold"
                     android:textAllCaps="true"
                     android:textAppearance="@style/inter_400_10_16"
-                    android:textColor="@color/color_181818" />
+                    android:textColor="@color/black" />
 
                 <View
                     android:visibility="invisible"
@@ -352,10 +348,9 @@
                     android:gravity="center"
                     android:letterSpacing="-0.01"
                     android:text="ADD"
-                    android:textStyle="bold"
                     android:textAllCaps="true"
                     android:textAppearance="@style/inter_400_10_16"
-                    android:textColor="@color/color_181818" />
+                    android:textColor="@color/black" />
 
                 <View
                     android:visibility="invisible"
@@ -372,10 +367,9 @@
                     android:gravity="center"
                     android:letterSpacing="-0.01"
                     android:text="BAL"
-                    android:textStyle="bold"
                     android:textAllCaps="true"
                     android:textAppearance="@style/inter_400_10_16"
-                    android:textColor="@color/color_181818" />
+                    android:textColor="@color/black" />
             </LinearLayout>
         </androidx.appcompat.widget.LinearLayoutCompat>
         <androidx.recyclerview.widget.RecyclerView
