--- a/app/src/main/res/layout/bottom_sheet_record.xml
+++ b/app/src/main/res/layout/bottom_sheet_record.xml
@@ -46,8 +46,7 @@
                     android:drawablePadding="8dp"
                     android:text="Add Record"
                     android:textColor="@color/white"
-                    android:textSize="22sp"
-                    android:textStyle="bold" />
+                    android:textSize="22sp" />
 
                 <LinearLayout
                     android:id="@+id/tv_add"
