--- a/app/src/main/res/layout/activity_create_bol.xml
+++ b/app/src/main/res/layout/activity_create_bol.xml
@@ -40,6 +40,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
+                android:textColorHint="@color/gray"
                 android:background="@drawable/bg_edit_text"
                 android:hint="ORD-2025-1-192E90"
                 android:padding="@dimen/_10sdp"
@@ -59,6 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
+                android:textColorHint="@color/gray"
                 android:background="@drawable/bg_edit_text"
                 android:hint="BOL-2025-1-51E73D"
                 android:padding="@dimen/_10sdp"
@@ -80,6 +82,7 @@
                 android:layout_marginBottom="16dp"
                 android:background="@drawable/bg_edit_text"
                 android:hint="SHP-2025-1-192E90"
+                android:textColorHint="@color/gray"
                 android:padding="@dimen/_10sdp"
                 android:textAppearance="@style/inter_400_10_10" />
 
@@ -101,6 +104,7 @@
                 android:paddingHorizontal="16dp"
                 android:paddingVertical="14dp"
                 android:singleLine="true"
+                android:textColorHint="@color/gray"
                 android:textAppearance="@style/inter_400_12_16"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -123,6 +127,7 @@
                 android:hint="John Smith"
                 android:paddingHorizontal="16dp"
                 android:paddingVertical="14dp"
+                android:textColorHint="@color/gray"
                 android:singleLine="true"
                 android:textAppearance="@style/inter_400_12_16"
                 android:textColor="@color/black"
@@ -171,8 +176,7 @@
         android:padding="@dimen/_8sdp"
         android:text="Done"
         android:textAllCaps="false"
-        android:textColor="@drawable/button_text_color"
-        android:textStyle="bold" />
+        android:textColor="@drawable/button_text_color" />
 
 </RelativeLayout>
 
