--- a/app/src/main/res/layout/activity_device_settings.xml
+++ b/app/src/main/res/layout/activity_device_settings.xml
@@ -48,8 +48,7 @@
                         android:drawablePadding="10dp"
                         android:drawableTint="@color/app_color"
                         android:text="Set Power"
-                        android:textSize="20dp"
-                        android:textStyle="bold" />
+                        android:textSize="20dp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -105,8 +104,7 @@
                         android:padding="10dp"
                         android:text="Set Power"
                         android:textColor="@color/white"
-                        android:textSize="15sp"
-                        android:textStyle="bold" />
+                        android:textSize="15sp" />
                 </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
@@ -135,8 +133,7 @@
                         android:drawablePadding="10dp"
                         android:drawableTint="@color/app_color"
                         android:text="Set Volume"
-                        android:textSize="20dp"
-                        android:textStyle="bold" />
+                        android:textSize="20dp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -191,8 +188,7 @@
                         android:padding="10dp"
                         android:text="Set Volume"
                         android:textColor="@color/white"
-                        android:textSize="15sp"
-                        android:textStyle="bold" />
+                        android:textSize="15sp" />
                 </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
