--- a/app/src/main/res/layout/fragment_inspection_history.xml
+++ b/app/src/main/res/layout/fragment_inspection_history.xml
@@ -93,8 +93,7 @@
                 android:padding="@dimen/_8sdp"
                 android:text="@string/cancel"
                 android:textAllCaps="false"
-                android:textColor="@drawable/button_text_color"
-                android:textStyle="bold" />
+                android:textColor="@drawable/button_text_color" />
 
 
         </RelativeLayout>
