--- a/app/src/main/res/layout/item_shipment.xml
+++ b/app/src/main/res/layout/item_shipment.xml
@@ -34,7 +34,7 @@
                     android:layout_gravity="center"
                     android:fontFamily="@font/inter_regular"
                     android:text="Shipped by:"
-                    android:textColor="@color/secondary_text_color" />
+                    android:textColor="@color/black" />
 
 
                 <TextView
@@ -43,8 +43,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_4sdp"
-                    android:fontFamily="@font/inter_bold"
-                    android:textColor="@color/secondary_dark_text_color"
+                    android:textColor="@color/black"
                     tools:text="I23246T5" />
 
             </LinearLayout>
@@ -89,7 +88,7 @@
                     android:layout_gravity="center"
                     android:fontFamily="@font/inter_regular"
                     android:text="Carrier:"
-                    android:textColor="@color/secondary_text_color" />
+                    android:textColor="@color/black" />
 
 
                 <TextView
@@ -98,9 +97,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_4sdp"
-                    android:fontFamily="@font/inter_bold"
                     android:text="Cleantec Logistics"
-                    android:textColor="@color/secondary_dark_text_color" />
+                    android:textColor="@color/black" />
 
             </LinearLayout>
 
@@ -123,7 +121,7 @@
                         android:layout_gravity="center"
                         android:fontFamily="@font/inter_regular"
                         android:text="DL:"
-                        android:textColor="@color/secondary_text_color" />
+                        android:textColor="@color/black" />
 
 
                     <TextView
@@ -132,8 +130,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_4sdp"
-                        android:fontFamily="@font/inter_bold"
-                        android:textColor="@color/secondary_dark_text_color"
+                        android:textColor="@color/black"
                         tools:text="200" />
 
                 </LinearLayout>
@@ -163,7 +160,7 @@
                     android:layout_gravity="center"
                     android:fontFamily="@font/inter_regular"
                     android:text="Driver:"
-                    android:textColor="@color/secondary_text_color" />
+                    android:textColor="@color/black" />
 
 
                 <TextView
@@ -172,8 +169,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/_4sdp"
-                    android:fontFamily="@font/inter_bold"
-                    android:textColor="@color/secondary_dark_text_color"
+                    android:textColor="@color/black"
                     tools:text="Tony Blair-Texas Grains" />
 
             </LinearLayout>
@@ -197,8 +193,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_4sdp"
-                        android:fontFamily="@font/inter_bold"
-                        android:textColor="@color/secondary_dark_text_color"
+                        android:textColor="@color/black"
                         tools:text="11/11/11" />
 
                 </LinearLayout>
