--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/colorPrimary"
     android:orientation="horizontal">
 
@@ -17,6 +18,7 @@
         android:textSize="@dimen/_10ssp" />
 
     <RelativeLayout
+        android:layout_marginBottom="4dp"
         android:layout_centerInParent="true"
         android:layout_below="@+id/txtMyWorkApp"
         android:layout_width="match_parent"
@@ -45,18 +47,33 @@
             android:textColor="@color/white"
             android:textSize="@dimen/_16ssp" />
 
+        <RelativeLayout
+            android:id="@+id/btnProfile"
+            android:layout_width="@dimen/_32sdp"
+            android:layout_height="@dimen/_32sdp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center_vertical"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:background="@drawable/bg_circle"
+            android:backgroundTint="@color/white"
+            android:gravity="center_vertical"
+            android:visibility="visible">
+
+            <TextView
+                android:id="@+id/name1stChar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:letterSpacing="-0.02"
+                android:textAllCaps="true"
+                android:textAppearance="@style/inter_500_24_30"
+                android:textColor="@color/colorPrimary"
+                tools:text="o" />
+
+        </RelativeLayout>
+
     </RelativeLayout>
 
-
-    <ImageView
-        android:layout_below="@+id/txtMyWorkApp"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/btnProfile"
-        android:layout_width="@dimen/_40sdp"
-        android:layout_height="@dimen/_40sdp"
-        android:layout_gravity="center_vertical"
-        android:layout_marginEnd="@dimen/_10sdp"
-        android:padding="@dimen/_6sdp"
-        android:src="@drawable/ic_dummy_profile" />
 
 </RelativeLayout>
