->1. Disabled Description for inspection when its good. 2. cant have multiple choices on inspection screen to be allowed 3. Inspection History needs to be fixed 4. After successful inspection the scan screen should be refreshed ready for new. 5. Clicking START should launch Inspection screen.

--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -233,7 +233,7 @@
                     android:layout_gravity="center_vertical"
                     android:fontFamily="@font/inter_medium"
                     android:gravity="center_vertical"
-                    android:text="@string/inventory"
+                    android:text="@string/inspection"
                     android:textAppearance="@style/inter_400_18_12"
                     android:textColor="@color/colorPrimary" />
 
